# ff_toolbox

./: .flake8  .gitignore  README.md  justfile  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
ci/: run_lint_remote.sh
src/: test.py
src/ff_toolbox/model/core/: draft.py  phys_representations.py  settings.py
src/ff_toolbox/model/pick_analyzers/: abstract_pick_analyzer.py  simple_pick_analyzer.py
src/ff_toolbox/model/pick_predictors/: abstract_pick_predictor.py  null_pick_predictor.py
src/ff_toolbox/model/pick_suggestors/: abstract_pick_suggestor.py  simple_pick_suggestor.py
src/ff_toolbox/model/rankings_generators/: abstract_rankings_generator.py  default_rankings_generator.py
src/model/core/: draft.py  phys_representations.py  settings.py
src/model/general/: draft.py
src/model/math/: points_ranking_mapper.py
src/model/pick_analyzers/: abstract_pick_analyzer.py  simple_pick_analyzer.py
src/model/pick_predictors/: abstract_pick_predictor.py  null_pick_predictor.py
src/model/pick_suggestors/: abstract_pick_suggestor.py  simple_pick_suggestor.py
src/model/rankings_generators/: abstract_rankings_generator.py  default_rankings_generator.py
