[project]
name = "ff-toolbox"
version = "0.1.0"
description = "UI and backend to help with fantasy football live drafting, trade analysis, and more."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
    "rust-just>=1.40.0",
]

[tool.mypy]
strict = true

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    # Missing trailing comma (not recommended with formatter)
    "COM812",
    # Missing docstring in magic method
    "D105",
    # Taken care of by formatting. Ignore for docstrings
    "E501",
]

[tool.ruff.lint.mccabe]
# Double the max complexity
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
